crates/pgls_pglinter/tests/snapshots/fk_without_index.snap
---
source: crates/pgls_pglinter/tests/diagnostics.rs
expression: content
snapshot_kind: text
---
Category: pglinter/base/howManyTableWithoutIndexOnFk
Severity: Warning
Message: Foreign key on Object has no index
Advices:
Foreign keys without indexes cause slow cascading operations and inefficient join queries.
[Info] Rule: B003
How to fix:
[Info]   1. create a index on foreign key or change warning/error threshold
