crates/pgls_pglinter/tests/snapshots/multiple_issues.snap
---
source: crates/pgls_pglinter/tests/diagnostics.rs
expression: content
snapshot_kind: text
---
Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Sequence 'public.BadName_id_seq' uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Ordinary 'public.BadName' uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Index 'public.BadName_pkey' uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Index 'public.BadName_pkey' uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Sequence 'public.BadName_id_seq' uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Object Object uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Object Object uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Object Object uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyObjectsWithUppercase
Severity: Warning
Message: Object Object uses uppercase characters
Advices:
Using uppercase in identifiers requires quoting and can cause case-sensitivity issues.
[Info] Rule: B005
How to fix:
[Info]   1. Do not use uppercase for any database objects

---

Category: pglinter/base/howManyTableWithoutIndexOnFk
Severity: Warning
Message: Foreign key on Object has no index
Advices:
Foreign keys without indexes cause slow cascading operations and inefficient join queries.
[Info] Rule: B003
How to fix:
[Info]   1. create a index on foreign key or change warning/error threshold

---

Category: pglinter/base/howManyTableWithoutPrimaryKey
Severity: Warning
Message: Table 'public.no_pk' has no primary key
Advices:
Tables without primary keys cannot be uniquely identified, which causes issues with replication, foreign keys, and efficient updates/deletes.
[Info] Rule: B001
How to fix:
[Info]   1. create a primary key or change warning/error threshold
